<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- [Title TextView Remains Unchanged] -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="E Book App"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/bookGrid"
        android:layout_width="326dp"
        android:layout_height="427dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/resultsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <!-- Example FrameLayout for 1st grid item -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/description_image1"
                android:focusable="true"
                android:src="@drawable/image1" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#F8F5F5" />
        </FrameLayout>

        <!-- Image 2 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/description_image2"
                android:focusable="true"
                android:src="@drawable/image2" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FFFFFF" />
        </FrameLayout>
        <!-- Image 3 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/description_image3"
                android:focusable="true"
                android:src="@drawable/image3" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FFFFFF" />
        </FrameLayout>

        <!-- Image 4 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_image4"
                android:scaleType="centerCrop"
                android:src="@drawable/image4" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FFFFFF" />

        </FrameLayout>

        <!-- Image 5 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_image5"
                android:scaleType="centerCrop"
                android:src="@drawable/image5" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FFFEFE"
                app:buttonIconTint="@color/white" />

        </FrameLayout>

        <!-- Image 6 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_image6"
                android:scaleType="centerCrop"
                android:src="@drawable/image6" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FDFDFD"
                app:buttonIconTint="#F8F7F7" />

        </FrameLayout>

        <!-- Image 7 -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_image7"
                android:scaleType="centerCrop"
                android:src="@drawable/image7" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FDFDFD"
                app:buttonIconTint="#F4F4F2" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/description_image8"
                android:focusable="true"
                android:src="@drawable/image8" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:buttonTint="#FDFDFD" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/image9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/description_image9"
                android:focusable="true"
                android:src="@drawable/image9" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#FEFFFF"
                android:buttonTint="#FDFDFD" />
        </FrameLayout>


    </androidx.gridlayout.widget.GridLayout>

    <!-- [Results Container Remains Unchanged] -->
    <LinearLayout
        android:id="@+id/resultsContainer"
        android:layout_width="370dp"
        android:layout_height="235dp"
        android:layout_marginTop="8dp"
        android:background="#DFA6A6"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookGrid">

        <TextView
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="Selected Book Details"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="14sp" />

        <!-- [TextView for Total Price] -->
        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:text="Total Cost: "
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000"
            android:textSize="14sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="340dp"
            android:layout_height="160dp"
            android:background="#EDE3E3"
            android:scrollbarStyle="insideInset"
            android:textAlignment="center"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/selectedBooksContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Dynamically added book details will go here -->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
